# CommProto

./: CMakeLists.txt  ideas.txt
AuthDevice/: AuthDeviceWrapper.h
AuthService/: AuthService.h  AuthServiceHandlers.cpp  AuthServiceHandlers.h  AuthServiceImpl.cpp  AuthServiceImpl.h  AuthServiceUI.h  AuthServiceUIImpl.cpp  AuthServiceUIImpl.h  CMakeLists.txt  auth_main.cpp  main.cpp
AuthService/config/: auth.cfg  dispatch.cfg
CommProtoDevice/: CMakeLists.txt
CommProtoDevice/DeviceImplementationTest/: CMakeLists.txt  DeviceImplementation.cpp
CommProtoDevice/interface/commproto/authdevice/: AuthDevice.h  AuthDeviceUtils.h  AuthDeviceWrapper.h  AuthHandlers.h  Structures.h
CommProtoDevice/interface/commproto/endpointdevice/: BaseEndpointAuth.h  BaseEndpointAuthHandlers.h  BaseEndpointWrapper.h
CommProtoDevice/interface/commproto/serial/: LogToSerial.h
CommProtoDevice/interface/commproto/thermo/: Thermostat.h  ThermostatWrapper.h
CommProtoDevice/src/: AuthDevice.cpp  AuthHandlers.cpp  BaseEndpointAuth.cpp  BaseEndpointAuthHandlers.cpp  LogToSerial.cpp  Structures.cpp  Thermostat.cpp
CommProtoDevice/src/smartpot/: PotWrapper.h  SmartPot.cpp  SmartPot.h
CommProtoLib/: CMakeLists.txt
CommProtoLib/interface/commproto/control/: BaseControl.h  ControllerChains.h  NotificationChains.h  ProgressBarChains.h  SliderChains.h
CommProtoLib/interface/commproto/device/: AuthChains.h
CommProtoLib/interface/commproto/diagnostics/: SystemData.h
CommProtoLib/interface/commproto/endpoint/: ChannelParserDelegator.h  (+1 more)
CommProtoLib/src/diagnostics/: SystemData.cpp
CommProtoLib/src/endpoint/: ChannelParserDelegator.cpp  ParserDelegatorFactory_endpoint.cpp
CommProtoLib/src/logger/: FileLogger.cpp
CommProtoLib/src/messages/: TypeMapper.cpp  TypeMapperImpl.cpp  TypeMapperObserver.h
CommProtoLib/src/parser/: MessageBuilder.cpp  ParserDelegator.cpp  ParserDelegatorFactory_parser.cpp  ParserDelegatorUtils_parser.cpp
CommProtoLib/src/utils/: Logging.cpp  String.cpp
CommProtoLib/test/: ByteStreamTest.cpp
CommProtoPlugin/: CMakeLists.txt
CommProtoPlugin/src/plugin/: PluginLoaderFactory.cpp  PluginLoaderImpl.cpp  PluginLoaderImpl.h
CommProtoService/: CMakeLists.txt
CommProtoService/interface/commproto/config/: ConfigParser.h
CommProtoService/interface/commproto/control/ux/: Control.h  ControlCollection.h  ControlHandler.h  HtmlUxContainer.h  Notification.h  ProgressBar.h  Slider.h  TemplateEngine.h  UIController.h  UIFactory.h  UxControllers.h  UxDelegatorProvider.h  UxExtensionParserProvider.h  UxGenerator.h
CommProtoService/interface/commproto/service/: ChannelManager.h  Connection.h  Dispatch.h  ParserDelegatorFactory.h  RegisterChannelHandler.h  SendToHandler.h
CommProtoService/src/control/ux/: BaseControlHandler.cpp  BaseControlHandler.h  BaseControlType.h  ButtonImpl.cpp  ButtonImpl.h  ControlHandler.cpp  HtmlUxGenerator.h  IdProvider.h  LabelImpl.cpp  LabelImpl.h  NotificationImpl.cpp  NotificationImpl.h  ParserDelegatorUtils.cpp  ProgressBarImpl.cpp  ProgressBarImpl.h  SliderImpl.cpp  SliderImpl.h  TemplateEngine.cpp  ToggleImpl.cpp  ToggleImpl.h  UIControllerImpl.cpp  UIControllerImpl.h  UIFactory.cpp  UpdateTracker.cpp  UpdateTracker.h  UxControllers.cpp  UxDelegatorProvider.cpp  UxGenerator.h
CommProtoService/src/service/: Connection.cpp  Dispatch.cpp  ParserDelegator.cpp  ParserDelegatorFactory.cpp  RegisterChannelHandler.cpp  RequestAllChannelsHandler.cpp  RequestAllChannelsHandler.h  SendToHandler.cpp
DeviceImplementations/: AuthDevice.cpp  AuthDevice.h  AuthDeviceWrapper.h  CMakeLists.txt  ThermostatDevice.cpp  ThermostatDevice.h  ThermostatDeviceWrapper.h  main.cpp
DiagnosticsService/: CMakeLists.txt  diag_main.cpp
DiagnosticsService/config/: diag.cfg
Dispatch/: CMakeLists.txt  dispatch_main.cpp
Endpoint/: CMakeLists.txt  endpoint_main.cpp
PlantHealth/: CMakeLists.txt  ConfigValues.h  Numbers.cpp  Numbers.h  OutputHelper.cpp  OutputHelper.h  PercentageSingleHealthTracker.cpp  PercentageSingleHealthTracker.h  PlantHandlers.cpp  PlantHandlers.h  PlantHealthProvider.cpp  PlantHealthProvider.h  SettingHelper.cpp  SettingHelper.h  SingleHealthTracker.cpp  SingleHealthTracker.h  plant_main.cpp
PlantHealth/config/: plant.cfg  plantdata.cfg
PlantInterface/: CMakeLists.txt
PlantInterface/plant/interface/: PlantMessages.h
PlantTester/: CMakeLists.txt  planttester_main.cpp
Rotary/: CMakeLists.txt  RotaryChains.h  UxRotary.cpp  UxRotary.h
Rotary/interface/rotary/: EndpointRotary.h  ExtensionProvider.h  Integration.h  RotaryHandler.h  UxRotary.h
Rotary/src/: EndpointRotary.cpp  ExtensionProvider.cpp  Integration.cpp  RotaryHandler.cpp  UxRotary.cpp
UXService/: CMakeLists.txt  FileLoader.cpp  FileLoader.h  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpServer.cpp  HttpServer.h  LoginHandler.cpp  LoginHandler.h  TemplateEngineLoader.cpp  TemplateEngineLoader.h  UxChannelParserDelegator.cpp  UxChannelParserDelegator.h  UxDelegatorProvider.cpp  UxDelegatorProvider.h  ux_main.cpp
UXService/config/: uxservice.cfg
UXService/html_files/: common.js  cookie.js  extensions.js  hub.html  index.html  login.html  login.js  playground.html  scripts.js  setup.html  setup.js  style.css  update.js
UXService/html_files/templates/: button.html  label.html  notif_button.html  notification.html  progress_bar.html  progress_bar_noname.html  rotary.html  sidebar_item.html  slider.html  slider_noname.html  text-line.html  toggle.html
cmake/: new_tc.cmake  toolchain.cmake  utility.cmake
makelib/: makelib.py
poco/: CMakeLists.txt
poco/cmake/: PocoCryptoTargets.cmake  PocoJWTTargets.cmake
poco/lib/: PocoCryptod.lib  PocoDataODBCd.lib  PocoDataSQLited.lib  PocoDatad.lib  PocoEncodingsd.lib  PocoFoundationd.lib  PocoJSONd.lib  PocoJWTd.lib  PocoMongoDBd.lib  PocoNetd.lib  PocoRedisd.lib  PocoUtild.lib  PocoXMLd.lib  PocoZipd.lib
sketches/auth_device/: auth_device.ino
sketches/endpoint_base/: endpoint_base.ino
sketches/ep_thermostat/: ep_thermostat.ino
sketches/smartpot/: smartpot.ino
sketches/thermoreal/: thermoreal.ino
(+60 files in other folders)
